--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,13 @@
-== README
+Share-it back end for RCOS.
+the back end will be storing info, 
+confirming authentication, and sending 
+all info to the client
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+resources used for ruby on rails
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+https://www.railstutorial.org
+
+https://www.codeschool.com
+
+http://www.stackoverflow.com
